@@ -10,14 +10,14 @@ which takes the place of a browser talking to a single site. It is responsible f
 which it does via cookies returned by the server.  To use it, one must create a 
 <A HREF="api/com/meterware/httpunit/WebRequest.html">request</A> and ask the WebConversation for a response.<BR> 
 For example:
-<PRE><CODE>    WebConversation wc = new WebConversation;
+<PRE><CODE>    WebConversation wc = new WebConversation();
     WebRequest     req = new GetMethodWebRequest( "http://www.meterware.com/testpage.html" );
     WebResponse   resp = wc.getResponse( req );
 </CODE></PRE>
 The <A HREF="api/com/meterware/httpunit/WebResponse.html">response</A> may now be manipulated either as 
 pure text (via the <CODE>toString()</CODE> method), as a DOM (via the <CODE>getDOM()</CODE> method), 
 or by using the various other methods described below.  Because the above sequence is so common, it can be abbreviated to:
-<PRE><CODE>    WebConversation wc = new WebConversation;
+<PRE><CODE>    WebConversation wc = new WebConversation();
     WebResponse   resp = wc.getResponse( "http://www.meterware.com/testpage.html" );
 </CODE></PRE>
 
@@ -25,7 +25,7 @@ or by using the various other methods described below.  Because the above sequen
 The simplest and most common form of navigation among web pages is via links. HttpUnit allows users to find links 
 by the text within them, and to use those links as new page requests. For example, this page contains a link to the JavaDoc
 for the <CODE>WebResponse</CODE> class, above.  That page could therefore be obtained as follows:
-<PRE><CODE>    WebConversation wc = new WebConversation;
+<PRE><CODE>    WebConversation wc = new WebConversation();
     WebResponse   resp = wc.getResponse( "http://httpunit.sourceforge.net/doc/Cookbook.html" ); // read this page
     WebLink       link = resp.getLinkWith( "response" );                                        // find the link
     WebRequest    req  = link.getRequest();                                                     // convert it to a request
@@ -132,7 +132,7 @@ and allowing for the possibility that a link from one active page could result i
 which are currently active.  Each response replaces the contents of the appropriate frame, which is not necessarily
 the topmost frame ("_top").  In the following scenation, there are two active subframes, named "overview" and "details":
 
-<PRE><CODE>    WebConversation wc = new WebConversation;
+<PRE><CODE>    WebConversation wc = new WebConversation();
     WebResponse top     = wc.getResponse( "http://www.meterware.com/Frames.html" ); // read a page with two frames
     WebResponse summary = wc.getFrameContents( "summary" );                         // read the summary frame
     WebLink     link    = summary.getLinkWith( "Cake Recipe" );                     // find the link (which targets "details" );
